--- a/tema_quienes_somos/views/layout.xml
+++ b/tema_quienes_somos/views/layout.xml
@@ -12,7 +12,7 @@
           <xpath expr="//div[@id='wrapwrap']/header/div" position="after">
               <div class="container">
                   <div class="alert alert-info mt16" role="alert">
-                      <strong>Welcome</strong> in our website!
+                      <h1>TEMA QUIENES SOMOS</h1>
                   </div>
               </div>
           </xpath>
